src/objects/cb5__CBInvoiceLine__c.object
<CustomObject>
    <fields>
        <fullName>cb5__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cb5__CBInvoice__c</fullName>
        <label>CB Invoice</label>
        <referenceTo>cb5__CBInvoice__c</referenceTo>
        <relationshipLabel>CB Invoice Lines</relationshipLabel>
        <relationshipName>CBInvoiceLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cb5__CBKey__c</fullName>
        <label>CBKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Details__c</fullName>
        <label>Details</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__ExtId__c</fullName>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Index__c</fullName>
        <displayFormat>IL-{000000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <label>CB Invoice Line</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>